feat: More readme and examples and test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,7 @@
         [value]="this.tipAmountPerPerson() | infinity"
       ></app-result-viewer>
       <app-result-viewer
+        data-test-id="result"
         text="Total"
         subText="person"
         [value]="this.totalAmount() | infinity"
