--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+* {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: -moz-none;
+  -o-user-select: none;
+  user-select: none;
+}
+
 :root {
   --min-width: 340px;
   --desktop-max:1440px;
