feat: Example and more test

--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -7,6 +7,7 @@
 
     <input
       #input
+      data-test-id="custom-input"
       [placeholder]="placeholder()"
       type="number"
       [name]="label()"
